# rosa

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  application-development.md  rosa-emu.cpp
api/: 8x16.cpp  8x16.h  application-development.md  events.cpp  events.h  key-repeat.cpp  ntsc-kit-platform.h  ntsc-kit.c  ntsc-kit.h  rocinante.cpp  rocinante.h  text-mode.cpp  text-mode.h  ui.cpp  ui.h
apps/apple2e/: apple2e.cpp  cpu6502.h  dis6502.cpp  emulator.h  interface_rosa.cpp
apps/coleco/: coleco_platform_rosa.cpp  emulator.cpp  tms9918.h  z80config.h
apps/launcher/: launcher.cpp  launcher.h
apps/mp3player/: mp3player.cpp
apps/showimage/: NOTES.md  showimage.cpp
apps/simple-apple2/: cpu6502.h  simple-apple2.cpp
apps/trs80/: README.md  trs80.cpp
